Install eds2xdd script alongside module

--- a/dist.ini
+++ b/dist.ini
@@ -2,18 +2,19 @@ name    = Convert-EDS-XDD
 author  = Ahmad Fatoum <athreef@cpan.org>
 license = Perl_5
 copyright_holder = Ahmad Fatoum
-copyright_year   = 2017
+copyright_year   = 2018
 
 [@Starter]
 
 [AutoPrereqs]
+[MetaProvides::Package]
 
 [GithubMeta]
 issues = 1
-user   = athreef
+user   = epl-viz
 [@Git]
 [Git::Init]
-remote = origin git@github.com:athreef/%N.git
+remote = origin git@github.com:epl-viz/%N.git
 [Git::NextVersion]
 [ChangelogFromGit]
 [OurPkgVersion]
@@ -23,3 +24,10 @@ type = pod
 filename = README.pod
 location = root
 
+[Test::MinimumVersion]
+max_target_perl = 5.10
+[MinimumPerlFast]
+[Test::Perl::Critic]
+[Test::Version]
+[Test::NoTabs]
+[Test::EOL]
